# pdf-granite

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-28-textract-parser.md
docs/superpowers/specs/: 2026-06-28-textract-parser-design.md
output/: SMR-1Q26-Presentation.html  SMR-1Q26-Presentation.md  SMR-1Q26-Presentation_charts.csv
output/liteparse/: liteparse_smr.md
output/markitdown/: smr.md
output/mineru/hybrid_auto/: SMR-1Q26-Presentation.md  SMR-1Q26-Presentation_content_list.json  SMR-1Q26-Presentation_content_list_v2.json  SMR-1Q26-Presentation_middle.json  SMR-1Q26-Presentation_model.json
output/textract/: SMR-1Q26-Presentation.json  SMR-1Q26-Presentation.md
src/pdf_granite/: __init__.py  convert.py  textract.py
tests/: test_convert.py  test_textract.py
